--- a/src/app/component/user-creation/user-creation.component.html
+++ b/src/app/component/user-creation/user-creation.component.html
@@ -1,4 +1,4 @@
-<div class="page-content">
+<div class="">
   <div class="mt-2 mb-2"><span class='page-title'> Create New User </span></div>
 
   <form [formGroup]="UserForm" class="form" novalidate>
