--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,7 @@
 body {
   margin: 0px !important;
   font-size: 12px;
+  height: 100vh;
 }
 
 .bgcolor {
@@ -124,9 +125,11 @@ mat-toolbar {
 .page-content {
   padding: 10px;
   margin: 10px;
+  height: calc(100% - 100px) !important;
   box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
   background: #fff;
+  height: calc(100% - 50px) !important;
 }
 
 .header {
@@ -185,6 +188,11 @@ mat-toolbar {
 .accont-menu {
   min-width: 180px;
   cursor: pointer;
+}
+
+.footer-conatc-lable{
+  border-right: orange solid;
+  padding-right: 10px;
 }
 
 
