fix for :: when clicking on user icon on top right additional pop over is coming up

--- a/src/app/component/dashboard/dashboard.component.html
+++ b/src/app/component/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="page-content">
+<div>
   <span class = 'page-title'>Dashboard </span>
   <ag-grid-angular style="width: 100%; height: 500px;"
   [gridOptions] = 'gridOptions' class="ag-theme-balham" [rowData]="rowData"
