--- a/src/styles.scss
+++ b/src/styles.scss
@@ -125,11 +125,10 @@ mat-toolbar {
 .page-content {
   padding: 10px;
   margin: 10px;
-  height: calc(100% - 100px) !important;
   box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
   background: #fff;
-  height: calc(100% - 50px) !important;
+  min-height: calc(100% - 100px) !important;
 }
 
 .header {
