--- a/src/app/component/user-creation/user-creation.component.html
+++ b/src/app/component/user-creation/user-creation.component.html
@@ -4,34 +4,55 @@
   <form [formGroup]="UserForm" class="form" novalidate>
     <div class="myform-field">
       <label for="name">Name</label>
-      <input type="text" formControlName="name" placeholder="Enter Name" class="form-control" id="name">
+      <input type="text" formControlName="name" placeholder="Enter Name" class="form-control" id="name"
+        [ngClass]="{ 'is-invalid': submitted && form.name.errors }">
+      <div *ngIf="submitted && form.name.errors" class="invalid-feedback">
+        <div *ngIf="form.name.errors.required">Name is required</div>
+      </div>
     </div>
 
     <div class="myform-field">
       <label for="userName">User Name</label>
-      <input type="text" formControlName="userName" placeholder="Enter User Name" class="form-control" id="userName">
+      <input type="text" formControlName="userName" placeholder="Enter User Name" class="form-control" id="userName"
+        [ngClass]="{ 'is-invalid': submitted && form.userName.errors }">
+      <div *ngIf="submitted && form.userName.errors" class="invalid-feedback">
+        <div *ngIf="form.userName.errors.required">User Name is required</div>
+      </div>
     </div>
 
     <div class="myform-field">
       <label for="mailId">Email</label>
-      <input id="mailId" formControlName="mailId" type="email" placeholder="Enter Email" class="form-control">
+      <input id="mailId" formControlName="mailId" type="email" placeholder="Enter Email" class="form-control"
+        [ngClass]="{ 'is-invalid': submitted && form.mailId.errors }">
+      <div *ngIf="submitted && form.mailId.errors" class="invalid-feedback">
+        <div *ngIf="form.mailId.errors.required">Email is required</div>
+      </div>
     </div>
     <div class="myform-field">
       <label for="mobile">Phone No</label>
-      <input id="mobile" formControlName="mobile" type="email" placeholder="Enter Phone Number" class="form-control">
+      <input id="mobile" formControlName="mobile" type="email" placeholder="Enter Phone Number" class="form-control"
+        [ngClass]="{ 'is-invalid': submitted && form.mailId.errors }">
+      <div *ngIf="submitted && form.mobile.errors" class="invalid-feedback">
+        <div *ngIf="form.mobile.errors.required">Phone Number is required</div>
+      </div>
     </div>
 
     <div class="myform-field">
       <label for="Roles">Role</label>
-      <select formControlName="Roles" placeholder="-- Select --" id="Roles" class="form-control">
+      <select formControlName="Roles" id="Roles" class="form-control"
+        [ngClass]="{ 'is-invalid': submitted && form.Roles.errors }">
+        <option value="-1">-- Select a Role --</option>
         <option *ngFor="let role of Roles" [value]="role.id">{{ role.roleName }}</option>
       </select>
+      <div *ngIf="submitted && form.Roles.errors" class="invalid-feedback">
+        <div *ngIf="form.Roles.errors.required">Role is required</div>
+      </div>
     </div>
 
-      </form>
+  </form>
 
   <br />
-  <div>
+  <div class="justify-content-center">
     <button class="app-button margin-top5" (click)="SaveUser()">Create User</button>
   </div>
 </div>
