--- a/src/app/component/app-root/app-root.component.html
+++ b/src/app/component/app-root/app-root.component.html
@@ -17,14 +17,14 @@
         <mat-icon style="vertical-align: middle;">contact_phone</mat-icon>
         <span style="color: white;" class="ml-1 span-vertical-center"> +91 8899776677</span>
       </div> -->
-      <div *ngIf="currentUser?.parent != null">
+      <div class="d-flex ml-2" style="align-items: center;" *ngIf="currentUser?.parent != null">
         <div class="d-flex ml-2">
           <mat-icon style="vertical-align: middle;">contact_phone</mat-icon>
-          <span class="span-vertical-center white-color">{{currentUser?.mobile}}</span>
+          <span class="span-vertical-center white-color">{{currentUser?.parent?.mobile}}</span>
         </div>
         <div class="d-flex ml-2">
           <mat-icon style="vertical-align: middle;">email</mat-icon>
-          <span class="span-vertical-center white-color">{{currentUser?.mailId}}</span>
+          <span class="span-vertical-center white-color">{{currentUser?.parent?.mailId}}</span>
         </div>
       </div>
     </div>
