--- a/src/app/component/user-details/user-details.component.html
+++ b/src/app/component/user-details/user-details.component.html
@@ -9,35 +9,35 @@
         <label for="name">Name</label>
         <input type="text" formControlName="name" placeholder="Enter Name" class="form-control" id="name"
           [ngClass]="{ 'is-invalid': submitted && form.name.errors }">
-        <div *ngIf="submitted && form.name.errors" class="invalid-feedback">
+        <!-- <div *ngIf="submitted && form.name.errors" class="invalid-feedback">
           <div *ngIf="form.name.errors.required">Name is required</div>
-        </div>
+        </div> -->
       </div>
 
       <div class="myform-field">
         <label for="userName">User Name</label>
         <input type="text" formControlName="userName" placeholder="Enter User Name" class="form-control" id="userName"
           [ngClass]="{ 'is-invalid': submitted && form.userName.errors }">
-        <div *ngIf="submitted && form.userName.errors" class="invalid-feedback">
+        <!-- <div *ngIf="submitted && form.userName.errors" class="invalid-feedback">
           <div *ngIf="form.userName.errors.required">User Name is required</div>
-        </div>
+        </div> -->
       </div>
 
       <div class="myform-field">
         <label for="mailId">Email</label>
         <input id="mailId" formControlName="mailId" type="email" placeholder="Enter Email" class="form-control"
           [ngClass]="{ 'is-invalid': submitted && form.mailId.errors }">
-        <div *ngIf="submitted && form.mailId.errors" class="invalid-feedback">
+        <!-- <div *ngIf="submitted && form.mailId.errors" class="invalid-feedback">
           <div *ngIf="form.mailId.errors.required">Email is required</div>
-        </div>
+        </div> -->
       </div>
       <div class="myform-field">
         <label for="mobile">Phone No</label>
         <input id="mobile" formControlName="mobile" type="email" placeholder="Enter Phone Number" class="form-control"
           [ngClass]="{ 'is-invalid': submitted && form.mobile.errors }">
-        <div *ngIf="submitted && form.mobile.errors" class="invalid-feedback">
+        <!-- <div *ngIf="submitted && form.mobile.errors" class="invalid-feedback">
           <div *ngIf="form.mobile.errors.required">Phone Number is required</div>
-        </div>
+        </div> -->
       </div>
 
       <div class="myform-field">
@@ -46,9 +46,9 @@
           [ngClass]="{ 'is-invalid': submitted && form.Roles.errors }">
           <option *ngFor="let role of Roles" [value]="role.id">{{ role.roleName }}</option>
         </select>
-        <div *ngIf="submitted && form.Roles.errors" class="invalid-feedback">
+        <!-- <div *ngIf="submitted && form.Roles.errors" class="invalid-feedback">
           <div *ngIf="form.Roles.errors.required">Role is required</div>
-        </div>
+        </div> -->
       </div>
 
 
@@ -60,9 +60,9 @@
         <label for="AcNo">Account Number</label>
         <input type="text" formControlName="accountNumber" placeholder="Enter Account Number" class="form-control"
           id="AcNo" [ngClass]="{ 'is-invalid': submitted && form.accountNumber.errors }">
-        <div *ngIf="submitted && form.accountNumber.errors" class="invalid-feedback">
+        <!-- <div *ngIf="submitted && form.accountNumber.errors" class="invalid-feedback">
           <div *ngIf="form.accountNumber.errors.required">Account Number is required</div>
-        </div>
+        </div> -->
       </div>
 
       <div class="myform-field">
@@ -74,18 +74,18 @@
         <label for="IFSC">IFSC Code</label>
         <input type="text" formControlName="ifscCode" placeholder="Enter IFSC Code" class="form-control" id="IFSC"
           [ngClass]="{ 'is-invalid': submitted && form.ifscCode.errors }">
-        <div *ngIf="submitted && form.ifscCode.errors" class="invalid-feedback">
+        <!-- <div *ngIf="submitted && form.ifscCode.errors" class="invalid-feedback">
           <div *ngIf="form.ifscCode.errors.required">IFSC Code is required</div>
-        </div>
+        </div> -->
       </div>
 
       <div class="myform-field">
         <label for="BankName">Bank Name</label>
         <input type="text" formControlName="bankName" placeholder="BankName" class="form-control" id="BankName"
           [ngClass]="{ 'is-invalid': submitted && form.bankName.errors }">
-        <div *ngIf="submitted && form.bankName.errors" class="invalid-feedback">
+        <!-- <div *ngIf="submitted && form.bankName.errors" class="invalid-feedback">
           <div *ngIf="form.bankName.errors.required">Bank Name is required</div>
-        </div>
+        </div> -->
       </div>
 
     </mat-step>
