--- a/src/app/user-details/user-details.component.html
+++ b/src/app/user-details/user-details.component.html
@@ -1,5 +1,5 @@
 <div class="p-2">
-  <span class='page-title'> User Profile </span>
+  <span class='page-title ml-3'> User Profile </span>
 
   <mat-horizontal-stepper labelPosition="bottom" #stepper class="p-2" >
     <form [formGroup]="UserForm" class="form">
