CSS changes done

--- a/src/app/component/app-root/app-root.component.html
+++ b/src/app/component/app-root/app-root.component.html
@@ -8,7 +8,9 @@
 
 <div class="content">
   <div class="page-content">
-    <router-outlet></router-outlet>
+    <div class="mt-5">
+      <router-outlet></router-outlet>
+    </div>
   </div>
   <div class="footer">
     <div class="d-flex">
