--- a/src/app/component/change-password/change-password.component.html
+++ b/src/app/component/change-password/change-password.component.html
@@ -1,4 +1,4 @@
-<div class="col-md-6 offset-md-3 mt-5">
+<div class="col-md-6 offset-md-3">
   <div class="card">
     <div class="header">Change Password</div>
     <mat-card>
