--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,28 @@ body {
   height: 100vh;
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: gray; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: gray; 
+}
+
 .bgcolor {
   // box-shadow: 0 2px 15px 0 rgba(0, 0, 0, 0.07);
   background-color: $background-color;
