--- a/src/styles.scss
+++ b/src/styles.scss
@@ -100,6 +100,12 @@ mat-toolbar {
     color: rgb(209, 209, 151);
   }
   min-width: 150px;
+
+}
+
+.app-button[disabled] {
+  opacity: .5;
+  cursor: not-allowed;
 }
 
 .page-title {
