activate change manager changes 1

--- a/src/app/component/user-management/user-management.component.html
+++ b/src/app/component/user-management/user-management.component.html
@@ -1,20 +1,14 @@
-<p-treeTable [value]="files">
-  <ng-template pTemplate="header">
-      <tr>
-          <th>Name</th>
-          <th>Size</th>
-          <th>Type</th>
-      </tr>
-  </ng-template>
-  <ng-template pTemplate="body" let-rowNode let-rowData="rowData">
-      <tr>
-          <td>
-              <p-treeTableToggler [rowNode]="rowNode"></p-treeTableToggler>
-              {{rowData.name}}
-          </td>
-          <td>{{rowData.size}}</td>
-          <td>{{rowData.type}}</td>
-      </tr>
-  </ng-template>
-</p-treeTable>
-<button (click) = 'setData()'>setData</button>
+<div >
+  <div class="d-flex" style="justify-content: space-between;" *ngFor ='let user of users'>
+    <span style="flex-basis: 10%;"> {{ user.name}}</span>
+    <span style="flex-basis: 10%;"> {{ user.mailId}}</span>
+    <span style="flex-basis: 20%;"> {{ user.userName}}</span>
+    <span style="flex-basis: 20%;"> {{ user.mobile}}</span>
+    <button style="flex-basis: 20%;" class="app-button" (click) = 'changeActivation(user)'>
+    {{ user.isActive ? 'Deactivate User' : 'Activate User'}}
+    </button>
+    <button style="flex-basis: 20%;" class="app-button" (click) = 'changeManager(user)'>
+      Change Manager
+      </button>
+  </div>
+</div>
