--- a/src/app/component/user-management/user-management.component.html
+++ b/src/app/component/user-management/user-management.component.html
@@ -1,36 +1,55 @@
-<div >
-  <div class="d-flex" style="justify-content: space-between;" *ngFor ='let user of users'>
+<span class='page-title'> User Management </span>
+<div>
+  <div class="d-flex flex-wrap justify-content-center">
+
+    <div class="metric-card">
+      <span class="title"> Total users</span>
+      <div class="count"> {{ users?.length}} </div>
+    </div>
+
+    <div class="metric-card">
+      <span class="title"> Active users</span>
+      <div class="count"> {{ activeUsersCount }} </div>
+    </div>
+
+    <div class="metric-card">
+      <span class="title"> In-Active users</span>
+      <div class="count"> {{ inActiveUsersCount }}</div>
+    </div>
+
+
+
+  </div>
+  <div class="d-flex mt-1" style="justify-content: space-between;" *ngFor='let user of users'>
     <span style="flex-basis: 10%;"> {{ user.name}}</span>
     <span style="flex-basis: 10%;"> {{ user.mailId}}</span>
     <span style="flex-basis: 20%;"> {{ user.userName}}</span>
     <span style="flex-basis: 20%;"> {{ user.mobile}}</span>
-    <button style="flex-basis: 20%;" class="app-button" (click) = 'changeActivation(user)'>
-    {{ user.isActive ? 'Deactivate User' : 'Activate User'}}
+    <button style="flex-basis: 20%;" class="app-button" (click)='changeActivation(user)'>
+      {{ user.isActive ? 'Deactivate User' : 'Activate User'}}
     </button>
-    <button style="flex-basis: 20%;" class="app-button" (click) = 'changeManager(user)'>
+    <button style="flex-basis: 20%;" class="app-button" (click)='changeManager(user)'>
       Change Manager
-      </button>
+    </button>
   </div>
 
   <ng-template #managerAssignDialog>
-   <div class="d-flex flex-column h-100" style="justify-content: space-between;">
-    <span class='page-title'> Choose new manager </span>
+    <div class="d-flex flex-column h-100" style="justify-content: space-between;">
+      <span class='page-title'> Choose new manager </span>
 
-    <div class="d-flex">
-      <label style = 'flex-basis: 30%;'
-      for="Roles">Manager</label>
-      <select style = 'flex-basis: 70%;' #manager id="Roles" class="form-control"
-        [ngClass]="{ 'is-invalid': submitted && form.Roles.errors }">
-        <option value="-1">-- Select a Manager --</option>
-        <option *ngFor="let manager of managers" [value]="manager.id">{{manager.name}}</option>
-      </select>
-    </div>
+      <div class="d-flex">
+        <label style='flex-basis: 30%;' for="Roles">Manager</label>
+        <select style='flex-basis: 70%;' #manager id="Roles" class="form-control">
+          <option value="-1">-- Select a Manager --</option>
+          <option *ngFor="let manager of managers" [value]="manager.id">{{manager.name}}</option>
+        </select>
+      </div>
 
-    <!-- <mat-select class="pt-2 pb-2" #manager>
+      <!-- <mat-select class="pt-2 pb-2" #manager>
       <mat-option>None</mat-option>
       <mat-option *ngFor="let manager of managers" [value]="manager.id">{{manager.name}}</mat-option>
     </mat-select> -->
-    <button class="app-button" (click) = "dialogRef.close(manager.value)">Update</button>
-   </div>
+      <button class="app-button" (click)="dialogRef.close(manager.value)">Update</button>
+    </div>
   </ng-template>
 </div>
