--- a/src/styles.scss
+++ b/src/styles.scss
@@ -200,4 +200,31 @@ mat-toolbar {
   padding-right: 10px;
 }
 
+.metric-card {
+  display: flex;
+  flex-direction: column;
+  width: 200px;
+  padding: 5px;
+  margin: 5px;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);;
+  margin-bottom: 10px;
+  align-items: center;
+  &::before {
+    content: '';
+    width: 100%;
+    height: 5px;
+    background: linear-gradient(to right,$background-color,  #fff);
+  }
+
+  .title {
+    margin-top: 10px;
+    font-weight: bold;
+  }
+
+  .count {
+    font-size: 30px;
+    font-weight: bolder;
+  }
+}
+
 
