--- a/src/app/component/kyc-approval/kyc-approval.component.html
+++ b/src/app/component/kyc-approval/kyc-approval.component.html
@@ -3,6 +3,7 @@
 <br>
 <button class="app-button" (click)="GetUserData()"> Get User Data & Approve</button> -->
 
+<span class='page-title'> Pending KYC Approvals </span>
 <div >
   <div class="d-flex" style="justify-content: space-between;" *ngFor ='let user of users'>
     <span style="flex-basis: 20%;"> {{ user.name}}</span>
