--- a/src/app/component/app-root/app-root.component.html
+++ b/src/app/component/app-root/app-root.component.html
@@ -1,34 +1,33 @@
-<div class="header1-layout bgcolor">
-  <app-header (toggleMenu)="ToggleSidePane()"></app-header>
-</div>
-
-<div class="layout-sidemenu header1-layout bgcolor" [ngClass]='{"activelayout-sidemenu" : showMenu}'>
-  <app-side-menu-bar (toggleMenu)='ToggleSidePane()'></app-side-menu-bar>
-</div>
-
-<div class="content">
-  <div class="page-content">
-    <div class="mt-5">
-      <router-outlet></router-outlet>
-    </div>
+<ng-container *ngIf='masterData?.data'>
+  <div class="header1-layout bgcolor">
+    <app-header (toggleMenu)="ToggleSidePane()"></app-header>
   </div>
-  <div class="footer">
-    <div class="d-flex">
-      <h3 class='footer-conatc-lable'>Contact Details</h3>
-      <!-- <div class="d-flex ml-2" style="align-items: center;">
-        <mat-icon style="vertical-align: middle;">contact_phone</mat-icon>
-        <span style="color: white;" class="ml-1 span-vertical-center"> +91 8899776677</span>
-      </div> -->
-      <div class="d-flex ml-2" style="align-items: center;" *ngIf="currentUser?.parent != null">
-        <div class="d-flex ml-2">
-          <mat-icon style="vertical-align: middle;">contact_phone</mat-icon>
-          <span class="span-vertical-center white-color">{{currentUser?.parent?.mobile}}</span>
-        </div>
-        <div class="d-flex ml-2">
-          <mat-icon style="vertical-align: middle;">email</mat-icon>
-          <span class="span-vertical-center white-color">{{currentUser?.parent?.mailId}}</span>
+
+  <div class="layout-sidemenu header1-layout bgcolor" [ngClass]='{"activelayout-sidemenu" : showMenu}'>
+    <app-side-menu-bar (toggleMenu)='ToggleSidePane()'></app-side-menu-bar>
+  </div>
+
+  <div class="content">
+    <div class="page-content">
+      <div class="mt-5">
+        <router-outlet></router-outlet>
+      </div>
+    </div>
+    <div class="footer">
+      <div class="d-flex">
+        <h3 class='footer-conatc-lable'>Contact Details</h3>
+        <div class="d-flex ml-2" style="align-items: center;" *ngIf="currentUser?.parent != null">
+          <div class="d-flex ml-2">
+            <mat-icon style="vertical-align: middle;">contact_phone</mat-icon>
+            <span class="span-vertical-center white-color">{{currentUser?.parent?.mobile}}</span>
+          </div>
+          <div class="d-flex ml-2">
+            <mat-icon style="vertical-align: middle;">email</mat-icon>
+            <span class="span-vertical-center white-color">{{currentUser?.parent?.mailId}}</span>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
+
+</ng-container>
