--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -2,8 +2,8 @@
   <div class="span-vertical-center paddingright10 cursor" *ngIf="isHandset$ | async" (click)="ToggleSideMenu()">
     <mat-icon class="white-color">menu</mat-icon>
   </div>
-  <div class="flex-grow-1 white-color" *ngIf="!(isHandset$ | async)"> <span>VCIPL</span> </div>
-  <div class="flex-grow-1 white-color"> <span>Sales App</span> </div>
+  <div class="flex-grow-1 white-color" > <span>VCIPL</span> </div>
+  <div class="flex-grow-1 white-color" *ngIf="!(isHandset$ | async)"> <span>Sales App</span> </div>
   <div class="d-flex p-2 cursor white-color" [matMenuTriggerFor]="menu">
     <button mat-icon-button aria-label="Example icon-button with a menu">
       <i class="material-icons icon-size">account_circle</i>
