colr theme changed

--- a/src/ag-grid-overrides.scss
+++ b/src/ag-grid-overrides.scss
@@ -1,4 +1,6 @@
+@import "./variables.scss";
+
 .ag-header {
-  background-color: $background-color !important;
+  background-color: $secondary-background-color !important;
   color: white !important;
 }
