--- a/src/styles.scss
+++ b/src/styles.scss
@@ -235,7 +235,7 @@ mat-toolbar {
     content: '';
     width: 100%;
     height: 5px;
-    background: linear-gradient(to right,$background-color,  #fff);
+    background: linear-gradient(to right,$background-color,  $secondary-background-color);
   }
 
   .title {
