--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,7 @@
 @import "~ag-grid-community/dist/styles/ag-grid.css";
 @import "~ag-grid-community/dist/styles/ag-theme-balham.css";
 @import "~ag-grid-community/dist/styles/ag-theme-material.css";
+@import "~ngx-bootstrap/datepicker/bs-datepicker.css";
 
 body {
   margin: 0px !important;
@@ -122,11 +123,10 @@ mat-toolbar {
     color: rgb(209, 209, 151);
   }
   min-width: 150px;
-
 }
 
 .app-button[disabled] {
-  opacity: .5;
+  opacity: 0.5;
   cursor: not-allowed;
 }
 
@@ -205,11 +205,11 @@ mat-toolbar {
 }
 
 .span-vertical-center {
-    display: inline-flex;
-    align-items: center;
-    margin-left: .5rem;
-    font-weight: bold;
-    color: $background-color;
+  display: inline-flex;
+  align-items: center;
+  margin-left: 0.5rem;
+  font-weight: bold;
+  color: $background-color;
 }
 
 .accont-menu {
@@ -217,7 +217,7 @@ mat-toolbar {
   cursor: pointer;
 }
 
-.footer-conatc-lable{
+.footer-conatc-lable {
   border-right: orange solid;
   padding-right: 10px;
 }
@@ -228,14 +228,18 @@ mat-toolbar {
   width: 200px;
   padding: 5px;
   margin: 5px;
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
   margin-bottom: 10px;
   align-items: center;
   &::before {
-    content: '';
+    content: "";
     width: 100%;
     height: 5px;
-    background: linear-gradient(to right,$background-color,  $secondary-background-color);
+    background: linear-gradient(
+      to right,
+      $background-color,
+      $secondary-background-color
+    );
   }
 
   .title {
@@ -250,9 +254,43 @@ mat-toolbar {
 }
 
 .mat-snack-bar-container {
-  color: rgba(255,255,255,.7);
+  color: rgba(255, 255, 255, 0.7);
   // background: #0f2862;
   background: $secondary-background-color;
 }
 
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+// @media only screen and (max-width: 1200px) {
+//   .inputflex {
+//     flex-basis: 25% !important;
+//     flex: 1;
+//     margin: 0px 10px 0px 10px;
+//   }
+// }
 
+@media screen and (min-width: 0px) {
+  .inputflex {
+    // flex: 1;
+    flex-basis: 100% !important;
+    margin-right: 0px !important;
+  }
+}
+
+@media screen and (min-width: 510px) {
+  .inputflex {
+    // flex: 1;
+    flex-basis: 40% !important;
+    margin-right: 10px !important;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .inputflex {
+    // flex: 1;
+    flex-basis: 25% !important;
+    margin-right: 10px !important;
+  }
+}
