--- a/src/app/component/user-management/user-management.component.html
+++ b/src/app/component/user-management/user-management.component.html
@@ -20,7 +20,7 @@
 
 
   </div>
-  <div class="d-flex mt-1" style="justify-content: space-between;" *ngFor='let user of users'>
+  <!-- <div class="d-flex mt-1" style="justify-content: space-between;" *ngFor='let user of users'>
     <span style="flex-basis: 10%;"> {{ user.name}}</span>
     <span style="flex-basis: 10%;"> {{ user.mailId}}</span>
     <span style="flex-basis: 20%;"> {{ user.userName}}</span>
@@ -31,28 +31,38 @@
     <button style="flex-basis: 20%;" class="app-button" (click)='changeManager(user)'>
       Change Manager
     </button>
-  </div>
+  </div> -->
 
   <div class="mt-5">
-    <p-treeTable [value]="data">
+    <p-treeTable [value]="users" [resizableColumns]="true" [(contextMenuSelection)]="selectedNode" [contextMenu]="cm">
       <ng-template pTemplate="header">
         <tr class="bgColor">
-          <th>Name</th>
-          <th>Size</th>
-          <th>Type</th>
+          <th *ngFor='let col of cols' ttResizableColumn>{{ col.header}}</th>
+
+          <th ttResizableColumn></th>
         </tr>
       </ng-template>
       <ng-template pTemplate="body" let-rowNode let-rowData="rowData">
-        <tr [ttRow]="rowNode">
+        <tr [ttRow]="rowNode" [ttContextMenuRow]="rowNode">
           <td>
             <p-treeTableToggler [rowNode]="rowNode"></p-treeTableToggler>
-            {{rowData.name}}
+            {{rowData.userName}}
           </td>
-          <td>{{rowData.size}}</td>
-          <td>{{rowData.type}}</td>
+          <td>{{rowData.name}}</td>
+          <td>{{rowData.mailId}}</td>
+          <td>{{rowData.mobile}}</td>
+          <td>
+            <div class="d-flex">
+              <button class="btn btn-link" (click)='changeActivation(rowData)'>
+                {{ rowData.isActive ? 'Deactivate' : 'Activate'}}
+              </button>
+            </div>
+
+          </td>
         </tr>
       </ng-template>
     </p-treeTable>
+    <p-contextMenu #cm [model]="items"></p-contextMenu>
   </div>
 
   <ng-template #managerAssignDialog>
