FIx:: Small screen-close side nav when clicked out side of panel

--- a/src/app/component/app-root/app-root.component.html
+++ b/src/app/component/app-root/app-root.component.html
@@ -6,6 +6,7 @@
   <div class="layout-sidemenu header1-layout bgcolor" [ngClass]='{"activelayout-sidemenu" : showMenu}'>
     <app-side-menu-bar (toggleMenu)='ToggleSidePane()'></app-side-menu-bar>
   </div>
+  <div *ngIf = 'showMenu' class = 'fullpage-overlay' (click)='ToggleSidePane()'></div>
 
   <div class="content">
     <div class="page-content">
