--- a/src/styles.scss
+++ b/src/styles.scss
@@ -299,3 +299,13 @@ mat-toolbar {
     margin-right: 10px !important;
   }
 }
+
+.fullpage-overlay {
+  position: fixed;
+  top:0;
+  bottom:0;
+  right:0;
+  left:0;
+  background-color: transparent;
+ z-index: 1000;
+}
